home-help-services/help.css
/* ... */
.answer p{
    padding-inline:2rem;

}
.accordian {
    width:100%;
}

.active {
    overflow:hidden !important;
    max-height:20rem !important;
    transition:2.5s !important;
}
@media (max-width:1128px) {
    .faq-titles p {
        width:75%;
    }
}
@media (max-width:700px) {
    .faq-section .wrapper {
        padding-inline:2rem;
    }
    .accordian {
        width:100%;
    }
    .faq-titles p {
        width:100%;
    }
}
@media (max-width:500px) {
    .faq-section .wrapper {
        padding-inline:1rem;
    }
    .faq-titles h2 {
        font-size:var(--mobile-heading-two);
    }
    .faq-titles p {
        font-size:var(--mobile-sub-heading);
    }
    .accordian p {
        font-size:var(--mobile-text);
    }
}




.watermark {
    position:absolute;
    font-weight:900 !important;
    font-size:150px !important;
    opacity:0.05;
}
.fifth-right {
    position:relative;
    overflow-x:hidden;

}
.fifth-right .watermark {
    top:-15%;
}
@media (max-width:1050px) {
    .fifth-right .watermark {
        top:-5%;
    }
    .fifth-right {
        padding-top:2rem !important;
    }
}

.faq-titles {
    position:relative;
    z-index:1;
    overflow-x:hidden;

}
.faq-titles .watermark {
    top:-30%;
    line-height:1;
    opacity:1;
    color:#010154;
    z-index:-1 !important;
}

